--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -18,8 +18,7 @@
     font: inherit;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 20rem;
-    max-width: 100%;
+    width: 100%;
   }
   
   .actions {
