--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -5,6 +5,7 @@
   border-bottom: 2px solid #8a2b06;
   padding: 1rem 0;
   margin: 1rem 0;
+  position: relative;
 }
 
 .cart-item h2 {
@@ -31,10 +32,22 @@
   border-radius: 6px;
   color: #363636;
 }
-
+.dismiss-order {
+  user-select: none;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 900;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.dismiss-order:hover {
+  color: #363636;
+}
 .actions {
   display: flex;
   flex-direction: column;
+  margin-block-start: auto;
 }
 
 @media (min-width: 768px) {
@@ -55,7 +68,7 @@
   background-color: transparent;
   cursor: pointer;
   margin-left: 1rem;
-  margin: 0.25rem;
+  margin-inline: 0.25rem;
 }
 
 .cart-item button:hover,
